добавил много классов которые способствуют работе карты просьба не удалять) если поможешь сможем рисовать маршрут(просто с API коечто)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="whoWillGo">Кому необходимо записаться на прием</string>
     <string name="me">мне</string>
     <string name="someoneElse">Другому человеку</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD5a7dwCxI7AFAyGmIYBk5MrkHn6_LmF1g</string>
 </resources>
