--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,7 @@
     <string name="me">мне</string>
     <string name="someoneElse">Другому человеку</string>
     <string name="title_activity_maps">Map</string>
+    <string name="seriaOMS">Серия полиса ОМС (При наличии)</string>
+    <string name="nomerOMS">Номер полиса ОМС</string>
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD5a7dwCxI7AFAyGmIYBk5MrkHn6_LmF1g</string>
 </resources>
