--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,10 +17,8 @@
     <string name="polis_number">Номер полиса ОМС</string>
     <string name="enter_oblast">Пожалуйста выберите область</string>
     <string name="whoWillGo">Кому необходимо записаться на прием</string>
-    <string name="me">мне</string>
-    <string name="someoneElse">Другому человеку</string>
     <string name="title_activity_maps">Map</string>
     <string name="seriaOMS">Серия полиса ОМС (При наличии)</string>
     <string name="nomerOMS">Номер полиса ОМС</string>
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD5a7dwCxI7AFAyGmIYBk5MrkHn6_LmF1g</string>
+    <string name="mapbox_access_token">pk.eyJ1IjoiZmVzaGFydDUwMCIsImEiOiJja2kwcTQyc3MwaXY4Mnltc3RjdGo0cWV1In0.nciMMKY38q8p37kx3uwzmw</string>
 </resources>
