--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,10 @@
     <string name="title_notifications">Notifications</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="service_not_available">service_not_available</string>
+    <string name="invalid_lat_long_used">invalid_lat_long_used</string>
+    <string name="no_location_data_provided">no_location_data_provided</string>
+    <string name="no_geocoder_available">ada</string>
+    <string name="no_location_detected">location_detected</string>
+    <string name="permission_rationale">permission_</string>
 </resources>
